--- a/frontend/todo-list/src/styles/table.css
+++ b/frontend/todo-list/src/styles/table.css
@@ -1,19 +1,13 @@
 .box_table {
-border: solid 2px red;
   align-items: center;
-  background: rgba(160, 160, 160, 0.3);
+  background: rgba(25, 25, 25, 0.781);
   border-bottom: solid 2px rgba(41, 40, 40, 0.8);
   border-radius: 0 0 20px 20px;
   box-shadow: 0 0 25px rgba(160, 160, 160, 0.9);
-  box-sizing: content-box;
-  font-size: 10px;
-  margin-top: 0.5%;
-  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  margin: 0.5% 5vw 5vw 5vw;
   overflow-x: auto;
-  text-align: center;
-}
-
-table {
-  table-layout: fixed;
   width: 100%;
 }
