--- a/frontend/todo-list/src/styles/task_form.css
+++ b/frontend/todo-list/src/styles/task_form.css
@@ -1,5 +1,4 @@
 .box_form {
-border: solid 2px red;
   align-items: center;
   background: rgba(25, 25, 25, 0.781);
   border-bottom: solid 2px rgba(41, 40, 40, 0.8);
@@ -15,8 +14,11 @@ border: solid 2px red;
 }
 
 .box_insert {
-  text-align: center;
-  width: 80%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  margin: 5vw;
+  width: 90%;
 }
 
 .box_insert input {
@@ -27,66 +29,10 @@ border: solid 2px red;
   margin: 10px;
   padding: 5px;
   text-align: center;
-  width: 70%;
-}
-
-.nameFilter {
-  font-size: 18px;
-  margin: 20px;
-  width: 500px;
-}
-
-.box_filters {
-  align-items: center;
-  display: flex;
-  flex-flow: row nowrap;
+  width: 30vw;
 }
 
 .btnIns:hover {
   box-shadow: 0 0 5px #2ff924 , 0 0 25px #2ff924;
 }
 
-.btnRem:hover {
-  box-shadow: 0 0 5px red , 0 0 25px red , 0 0 50px red , 0 0 100px red;
-}
-
-.btnFilter:hover {
-  box-shadow: 0 0 5px #2e67f8 , 0 0 25px #2e67f8 , 0 0 50px #2e67f8 , 0 0 100px #2e67f8;
-}
-
-
-
-.appFilters {
-  display: flex;
-  width: 100%;
-}
-
-.appFilters img {
-  margin-right: 10px;
-}
-
-.btnAppFilters {
-  align-items: center;
-  border: none;
-  display: flex;
-  font-size: 10pt;
-  height: auto;
-  justify-content: center;
-  margin-top: 0;
-  text-align: center;
-  width: fit-content;
-}
-
-.btnAppFilters:disabled {
-  color: rgba(0, 0, 0, 0);
-}
-
-.btnAppFilters:hover {
-  background: rgba(25, 25, 25, 0.781);
-  color: red;
-  font-weight: 300;
-}
-
-.btnAppFilters:hover:disabled {
-  color: rgba(0, 0, 0, 0);
-}
